--- a/naylul.html
+++ b/naylul.html
@@ -9,11 +9,18 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #e3e3ff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            color: #ffffff;
+            background: black;
+            text-align: center;
+            overflow: hidden;
+        }
+
+        canvas {
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 0;
         }
 
         .app-container {
@@ -37,7 +44,7 @@
         .developer {
             margin-bottom: 20px;
             font-size: 14px;
-            color: #;
+            color: #ff0080;
         }
 
         .progress-circle {
@@ -63,12 +70,13 @@
             border: none;
             border-radius: 8px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease;
             box-shadow: 0 0 30px #ff0080;
         }
 
         .ad-button:hover {
-            background-color: #ff0080;
+            background-color: #ff0040;
+            transform: scale(1.1); /* Scales the button slightly */
         }
 
         .toggle-container {
@@ -79,7 +87,6 @@
             align-items: center;
             justify-content: center;
             gap: 10px;
-            
         }
 
         .toggle-container label {
@@ -131,10 +138,44 @@
         input:checked + .slider:before {
             transform: translateX(28px);
         }
+
+        .rain {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+            background: black;
+            overflow: hidden;
+        }
+
+        .raindrop {
+            position: absolute;
+            width: 2px;
+            height: 100px;
+            background: linear-gradient(transparent, rgba(255, 255, 255, 0.5));
+            animation: fall 2s linear infinite;
+        }
+
+        @keyframes fall {
+            0% {
+                transform: translateY(-100px);
+                opacity: 1;
+            }
+
+            100% {
+                transform: translateY(100vh);
+                opacity: 0;
+            }
+        }
+
     </style>
 </head>
 
 <body>
+    <div class="rain"></div>
+
     <div class="app-container">
         <h1>MoneTag Auto Ads</h1>
         <div class="developer">MR UNKNOWN</div>
@@ -162,7 +203,7 @@
             if (typeof show_8586298 === 'function') {
                 show_8586298().then(() => {
                     watchedAds++;
-                    earnedPoints += 10; // প্রতিটি অ্যাডে ১০ পয়েন্ট
+                    earnedPoints += 10; // Each ad earns 10 points
                     updateDisplay();
                 }).catch(error => {
                     console.error('Ad failed to load or display:', error);
@@ -188,10 +229,10 @@
             }
         }
 
-        // Start auto ads (15-second interval)
+        // Start auto ads (3-second interval)
         function startAutoAds() {
             if (!autoAdsInterval) {
-                autoAdsInterval = setInterval(showAd, 3000); // ১৫ সেকেন্ড পর পর অ্যাড দেখাবে
+                autoAdsInterval = setInterval(showAd, 3000); // Display ad every 3 seconds
             }
         }
 
@@ -199,6 +240,19 @@
         function stopAutoAds() {
             clearInterval(autoAdsInterval);
             autoAdsInterval = null;
+        }
+
+        // Generate raindrops
+        const rainContainer = document.querySelector('.rain');
+        const rainCount = 100;
+
+        for (let i = 0; i < rainCount; i++) {
+            const raindrop = document.createElement('div');
+            raindrop.classList.add('raindrop');
+            raindrop.style.left = Math.random() * 100 + 'vw';
+            raindrop.style.animationDelay = Math.random() * 2 + 's';
+            raindrop.style.animationDuration = 2 + Math.random() * 2 + 's';
+            rainContainer.appendChild(raindrop);
         }
     </script>
 </body>
